syntax = "proto3";

package tests;

service GRpcReq {
	rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
	int32 A = 1;
}

// The response message containing the greetings
message HelloReply {
	int32 B = 1;
}